<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/public_post_text"
        android:layout_width="223dp"
        android:layout_height="56dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:text="Would you like to post this mood event as a public post?"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="274dp" />

    <TextView
        android:id="@+id/public_checkbox_text"
        android:layout_width="223dp"
        android:layout_height="23dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:text="Make the post public"
        app:layout_constraintTop_toBottomOf="@+id/public_post_text"
        tools:layout_editor_absoluteX="97dp" />

    <CheckBox
        android:id="@+id/public_checkbox"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@id/public_checkbox_text"
        app:layout_constraintEnd_toEndOf="@id/public_checkbox_text"
        app:layout_constraintTop_toTopOf="@id/public_checkbox_text"
        app:buttonTint="@color/checkbox_tint"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>