...
        android:src="@drawable/back_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/mood_events_list_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mood_events_list_toolbar" />

    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_background"
        android:contentDescription="TODO"
        android:elevation="8dp"
...
